<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles/Utility -->
    <string name="app_name">Tekkom Quiz</string>
    <string name="back" />
    <string name="settings" />

    <string name="settingsTitle">Level Kesulitan</string>
    <string name="level1">Semester 1</string>
    <string name="level2">Semester 3</string>
    <string name="level3">Semester 5</string>

    <string name="timeTitle">Waktu Pengerjaan</string>
    <string name="seconds30">30 Detik</string>
    <string name="seconds60">60 Detik</string>
    <string name="seconds90">90 Detik</string>

    <string name="scoreContent">This is your score</string>
    <string name="scoreHeader">Score</string>

    <string name="textTime">30</string>
    <string name="previous">Sebelumnya</string>
    <string name="next">Lanjut</string>
    <string name="submit">Selesai</string>
    <string name="update">Update Soal</string>
    <string name="startQuiz">Mulai Quiz</string>
</resources>
