<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#001d3d"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.tekkomquiz.MainActivity"
        >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="280dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/ic_rectangle"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="Tekkom Quiz"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="Cara Bermain"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="1. Pilih level kesulitan yang diinginkan"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="2. Pilih waktu pengerjaan quiz"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="3. Tekan tombol ''Update Soal'' dibawah"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="4. Tekan Tombol ''Mulai Mengerjakan''"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainContent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/levelBackground"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/image_shape_gray"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/levelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settingsTitle"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="@+id/levelBackground"
            app:layout_constraintTop_toTopOf="@+id/levelBackground" />

        <RadioGroup
            android:id="@+id/levelRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/levelBackground"
            app:layout_constraintTop_toBottomOf="@+id/levelHeader">

            <RadioButton
                android:id="@+id/radioButtonLevelOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/level1" />

            <RadioButton
                android:id="@+id/radioButtonLevelTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/level2" />

            <RadioButton
                android:id="@+id/radioButtonLevelThree"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:layout_height="wrap_content"
                android:text="@string/level3" />
        </RadioGroup>

        <!-- Time -->
        <ImageView
            android:id="@+id/timeBackground"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/image_shape_gray"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/timeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/timeTitle"
            app:layout_constraintStart_toStartOf="@+id/timeBackground"
            app:layout_constraintTop_toTopOf="@+id/timeBackground" />

        <RadioGroup
            android:id="@+id/radioGroupTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/timeBackground"
            app:layout_constraintTop_toBottomOf="@+id/timeHeader">

            <RadioButton
                android:id="@+id/radioButton30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/seconds30" />

            <RadioButton
                android:id="@+id/radioButton60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/seconds60" />

            <RadioButton
                android:id="@+id/radioButton90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/seconds90" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/progressBarDownload"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelBackground" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rounded"
            android:elevation="2dp"
            android:gravity="center"
            android:onClick="onButtonUpdate"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelBackground" />


        <Button
            android:id="@+id/buttonStartQuiz"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/button_rounded"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:elevation="2dp"
            android:gravity="center"
            android:enabled="false"
            android:onClick="onButtonStartQuiz"
            android:text="@string/startQuiz"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>